<resources>
    <string name="app_name">Hostel Management</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="already_nhave_an_naccount">Already \nhave an \nAccount?</string>
    <string name="register">Register</string>
    <string name="new_user_register_now">New user? Register Now</string>
    <string name="use_other_methods">Use other Methods</string>
    <string name="facebook">Facebook</string>
    <string name="google_plus">Google Plus</string>
    <string name="add">Add</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="here_s_nyour_first_nstep_with_nus">Here’s\nyour first\nstep with \nus!</string>
    <string name="login_hero">login_hero</string>
    <string name="banner1">Hostel Banner</string>
</resources>